--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         Password should contain at least one Uppercase letter(A-Z)
         <br />
         Password should contain at least one lowercase letter(a-z) <br />
-        Password should contain at least one Special chrecter <br />
+        Password should contain at least one Special character <br />
         Password should contain at least one digit <br />
       </p>
     </div>
